FIX 113416 select vertical alignment into collection multiple tables

--- a/skins/default/form.scss
+++ b/skins/default/form.scss
@@ -231,6 +231,7 @@ fieldset {
 						> select {
 							height: 22px;
 							margin: -2px -6px -2px 0;
+							vertical-align: top;
 						}
 
 						&.minus {
